EXP2/csubsub_bison.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB ID RB
   20       | error

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 InnerCompSt: Def InnerCompSt
   28            | Stmt InnerCompSt
   29            | ε

   30 CompSt: LC InnerCompSt RC

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error

   38 DefList: Def DefList
   39        | ε

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 20 23 37
    STRUCT (258) 12 13
    RETURN (259) 33
    IF (260) 34 35
    ELSE (261) 35
    WHILE (262) 36
    FLOAT (263) 62
    INT (264) 18 61
    TYPE (265) 10
    SEMI (266) 4 5 31 33 40
    COMMA (267) 9 24 42 63
    ASSIGNOP (268) 44 45
    RELOP (269) 48
    PLUS (270) 49
    MINUS (271) 50 54
    STAR (272) 51
    DIV (273) 52
    AND (274) 46
    OR (275) 47
    DOT (276) 59
    NOT (277) 55
    LP (278) 21 22 34 35 36 53 56 57
    RP (279) 21 22 34 35 36 53 56 57
    LB (280) 18 19 58
    RB (281) 18 19 58
    LC (282) 12 30
    RC (283) 12 30
    ID (284) 14 16 17 19 21 22 56 57 59 60
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList (35)
        on left: 8 9
        on right: 4 9
    Specifier (36)
        on left: 10 11
        on right: 4 5 6 26 40
    StructSpecifier (37)
        on left: 12 13
        on right: 11
    OptTag (38)
        on left: 14 15
        on right: 12
    Tag (39)
        on left: 16
        on right: 13
    VarDec (40)
        on left: 17 18 19 20
        on right: 8 9 18 19 26 43 44
    FunDec (41)
        on left: 21 22 23
        on right: 6
    VarList (42)
        on left: 24 25
        on right: 21 24
    ParamDec (43)
        on left: 26
        on right: 24 25
    InnerCompSt (44)
        on left: 27 28 29
        on right: 27 28 30
    CompSt (45)
        on left: 30
        on right: 6 32
    Stmt (46)
        on left: 31 32 33 34 35 36 37
        on right: 28 34 35 36
    DefList (47)
        on left: 38 39
        on right: 12 38
    Def (48)
        on left: 40
        on right: 27 38
    DecList (49)
        on left: 41 42
        on right: 40 42
    Dec (50)
        on left: 43 44
        on right: 41 42
    Exp (51)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 31 33 34 35 36 44 45 46 47 48 49 50 51 52 53 54 55 58 59 63 64
    Args (52)
        on left: 63 64
        on right: 56 63


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error •

    $default  reduce using rule 7 (ExtDef)


State 2

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    error  shift, and go to state 14
    SEMI   shift, and go to state 15
    ID     shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 9

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 20


State 11

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end •

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 14

   20 VarDec: error •
   23 FunDec: error •

    LC        reduce using rule 23 (FunDec)
    $default  reduce using rule 20 (VarDec)


State 15

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 16

   17 VarDec: ID •
   21 FunDec: ID • LP VarList RP
   22       | ID • LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 17

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB ID RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 21

   21 FunDec: ID LP • VarList RP
   22       | ID LP • RP

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3
    RP      shift, and go to state 30

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 32
    ParamDec         go to state 33


State 22

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 34
    ID     shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 18


State 24

   18 VarDec: VarDec LB • INT RB
   19       | VarDec LB • ID RB

    INT  shift, and go to state 37
    ID   shift, and go to state 38


State 25

   30 CompSt: LC • InnerCompSt RC

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    RETURN  shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    FLOAT   shift, and go to state 43
    INT     shift, and go to state 44
    TYPE    shift, and go to state 3
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 25
    ID      shift, and go to state 48

    RC  reduce using rule 29 (InnerCompSt)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    InnerCompSt      go to state 49
    CompSt           go to state 50
    Stmt             go to state 51
    Def              go to state 52
    Exp              go to state 53


State 26

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 27

   40 Def: Specifier • DecList SEMI

    error  shift, and go to state 34
    ID     shift, and go to state 35

    VarDec   go to state 54
    DecList  go to state 55
    Dec      go to state 56


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 57


State 29

   38 DefList: Def • DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 29


State 30

   22 FunDec: ID LP RP •

    $default  reduce using rule 22 (FunDec)


State 31

   26 ParamDec: Specifier • VarDec

    error  shift, and go to state 34
    ID     shift, and go to state 35

    VarDec  go to state 59


State 32

   21 FunDec: ID LP VarList • RP

    RP  shift, and go to state 60


State 33

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 61

    $default  reduce using rule 25 (VarList)


State 34

   20 VarDec: error •

    $default  reduce using rule 20 (VarDec)


State 35

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 37

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 62


State 38

   19 VarDec: VarDec LB ID • RB

    RB  shift, and go to state 63


State 39

   37 Stmt: error •

    $default  reduce using rule 37 (Stmt)


State 40

   33 Stmt: RETURN • Exp SEMI

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 64


State 41

   34 Stmt: IF • LP Exp RP Stmt
   35     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 65


State 42

   36 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 66


State 43

   62 Exp: FLOAT •

    $default  reduce using rule 62 (Exp)


State 44

   61 Exp: INT •

    $default  reduce using rule 61 (Exp)


State 45

   54 Exp: MINUS • Exp

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 67


State 46

   55 Exp: NOT • Exp

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 68


State 47

   53 Exp: LP • Exp RP

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 69


State 48

   56 Exp: ID • LP Args RP
   57    | ID • LP RP
   60    | ID •

    LP  shift, and go to state 70

    $default  reduce using rule 60 (Exp)


State 49

   30 CompSt: LC InnerCompSt • RC

    RC  shift, and go to state 71


State 50

   32 Stmt: CompSt •

    $default  reduce using rule 32 (Stmt)


State 51

   28 InnerCompSt: Stmt • InnerCompSt

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    RETURN  shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    FLOAT   shift, and go to state 43
    INT     shift, and go to state 44
    TYPE    shift, and go to state 3
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 25
    ID      shift, and go to state 48

    RC  reduce using rule 29 (InnerCompSt)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    InnerCompSt      go to state 72
    CompSt           go to state 50
    Stmt             go to state 51
    Def              go to state 52
    Exp              go to state 53


State 52

   27 InnerCompSt: Def • InnerCompSt

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    RETURN  shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    FLOAT   shift, and go to state 43
    INT     shift, and go to state 44
    TYPE    shift, and go to state 3
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 25
    ID      shift, and go to state 48

    RC  reduce using rule 29 (InnerCompSt)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    InnerCompSt      go to state 73
    CompSt           go to state 50
    Stmt             go to state 51
    Def              go to state 52
    Exp              go to state 53


State 53

   31 Stmt: Exp • SEMI
   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID

    SEMI      shift, and go to state 74
    ASSIGNOP  shift, and go to state 75
    RELOP     shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    DOT       shift, and go to state 83
    LB        shift, and go to state 84


State 54

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB ID RB
   43 Dec: VarDec •
   44    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 85
    LB        shift, and go to state 24

    $default  reduce using rule 43 (Dec)


State 55

   40 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 86


State 56

   41 DecList: Dec •
   42        | Dec • COMMA DecList

    COMMA  shift, and go to state 87

    $default  reduce using rule 41 (DecList)


State 57

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 58

   38 DefList: Def DefList •

    $default  reduce using rule 38 (DefList)


State 59

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB ID RB
   26 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 60

   21 FunDec: ID LP VarList RP •

    $default  reduce using rule 21 (FunDec)


State 61

   24 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 88
    ParamDec         go to state 33


State 62

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 63

   19 VarDec: VarDec LB ID RB •

    $default  reduce using rule 19 (VarDec)


State 64

   33 Stmt: RETURN Exp • SEMI
   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID

    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 75
    RELOP     shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    DOT       shift, and go to state 83
    LB        shift, and go to state 84


State 65

   34 Stmt: IF LP • Exp RP Stmt
   35     | IF LP • Exp RP Stmt ELSE Stmt

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 90


State 66

   36 Stmt: WHILE LP • Exp RP Stmt

    FLOAT  shift, and go to state 43
    INT    shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    ID     shift, and go to state 48

    Exp  go to state 91


State 67

   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   54    | MINUS Exp •
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID

    STAR  shift, and go to state 79
    DIV   shift, and go to state 80
    DOT   shift, and go to state 83
    LB    shift, and go to state 84

    $default  reduce using rule 54 (Exp)


State 68

   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   55    | NOT Exp •
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID

    DOT  shift, and go to state 83
    LB   shift, and go to state 84
